@@ -69,9 +69,25 @@ NetworkJob::NetworkJob(QNetworkReply *j)
 
 NetworkJob::~NetworkJob()
 {
+    cancelJob();
+}
+
+void NetworkJob::cancelAndDelete()
+{
+    cancelJob();
+    deleteLater();
+}
+
+void NetworkJob::cancelJob()
+{
     if (job) {
         disconnect(job, SIGNAL(finished()), this, SLOT(jobFinished()));
+        disconnect(job, SIGNAL(readyRead()), this, SLOT(handleReadyRead()));
+        disconnect(job, SIGNAL(error(QNetworkReply::NetworkError)), this, SIGNAL(error(QNetworkReply::NetworkError)));
+        disconnect(job, SIGNAL(uploadProgress(qint64, qint64)), this, SIGNAL(uploadProgress(qint64, qint64)));
+        disconnect(job, SIGNAL(downloadProgress(qint64, qint64)), this, SLOT(downloadProg(qint64, qint64)));
         disconnect(job, SIGNAL(destroyed(QObject *)), this, SLOT(jobDestroyed(QObject *)));
+        job->close();
         job->abort();
         job->deleteLater();
         job=0;
@@ -201,6 +217,6 @@ void NetworkAccessManager::timerEvent(QTimerEvent *e)
 {
     NetworkJob *job = timers.key(e->timerId());
     if (job) {
-        job->abort();
+        job->cancelAndDelete();
     }
 }
